[package]
name = "render-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
client = ["dep:libloading", "dep:lazy_static"]

[dependencies]

[dependencies.libloading]
version = "0.7.4"
optional = true

[dependencies.lazy_static]
version = "1.4.0"
optional = true