[package]
name = "render-stdout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "render"
crate-type = ["cdylib"]

[dependencies]

[dependencies.render-api]
path = "../render-api"
package = "render-api"
features = []